web_app_hello-world/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
  labels:
    app.kubernetes.io/name: web-app
  name: web-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: web-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: web-app
    spec:
      containers:
      - image: nginx
        name: web-app
        command: 
          - /bin/sh
          - -c
          - "echo 'Hello Nick , welcome to your web app!' > /usr/share/nginx/html/index.html && nginx -g 'daemon off;'"
            #      dnsConfig:
            #            options:
            #              - name: ndots
            #                value: "2"
            #
